<resources>
    <string name="app_name">Fedi Photo</string>
    <string name="accounts">Accounts</string>
    <string name="add_account">Add account</string>
    <string name="add_status">Add status config</string>
    <string name="remove_account">Remove this account</string>
    <string name="remove_status">Remove this status config</string>
    <string name="settings">Settings</string>
    <string name="camera_on_start">Camera on start</string>
    <string name="camera_on_start_summary">Start the camera when Fedi Photo starts so you can snap and post a photo quickly.</string>
    <string name="active_account">Make this account the active one</string>
    <string name="active_status">Make this status the active one</string>
    <string name="text_for_post">Text for post:</string>
    <string name="status_config">Status configs</string>
    <string name="label_for_status">Label this status:</string>
    <string name="post_visibility">Post visibility:</string>
    <string name="about">About</string>
    <string name="field_label_instance">Instance:</string>
    <string name="field_label_user_url">User URL:</string>
    <string name="radio_button_label_direct">Direct</string>
    <string name="radio_button_label_followers">Followers</string>
    <string name="radio_button_label_unlisted">Unlisted</string>
    <string name="radio_button_label_public">Public</string>
    <string name="label_data_format_field">Date format:</string>
    <string name="label_gps_format_field">GPS coordinates format:</string>
    <string name="no_account_to_remove">No account to remove.</string>
    <string name="account_removed_account_0_is_active">Account removed and account 0 is now the active selected account.</string>
    <string name="button_camera_text">Press for camera\n%s\n%s</string>
    <string name="camera_permission_granted">Permission to camera granted. Take a photo.</string>
    <string name="camera_permission_denied">Permission to camera denied.</string>
    <string name="external_storage_permission_granted">Permission to write to external storage granted. Take a photo.</string>
    <string name="external_storage_permission_denied">Permission to write to external storage denied.</string>
    <string name="need_camera_permission">Need permission to the camera.</string>
    <string name="external_storage_permission_needed">Need permission to write to external storage.</string>
    <string name="token_does_not_look_valid">Token \"%s\" does not look valid. Try again.</string>
    <string name="account_created">Account created. Setup a status configuration.</string>
    <string name="enter_an_instance_name">Enter an instance name. For example: pleroma.site</string>
    <string name="instance_string_format">Instance \"%s\"</string>
    <string name="select_account">Select account…</string>
    <string name="select_status">Select status…</string>
    <string name="label_can_not_be_blank">Label can not be blank. Key in a meaningful name for this status config.</string>
    <string name="no_status_config_to_remove">No status config to remove.</string>
    <string name="status_config_removed_status_0_active">Status config removed and status 0 is now the selected active status.</string>
    <string name="photo_file_name_blank">Photo file name is blank.</string>
    <string name="post_success">Post success</string>
    <string name="older_workers_prompt">%d worker(s) over a day old. Would you like to cancel them?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="workers_cancelled">%d workers cancelled.</string>
    <string name="fedi_photo_for_android">\"Fedi Photo for Android \"</string>
    <string name="account">Account</string>
    <string name="status_config_activity_title">Status Config</string>
    <string name="action_after_posting_photo">Action after posting photo</string>
    <string name="general">General</string>
    <string name="radio_button_label_never">Never</string>
    <string name="radio_button_label_always">Always</string>
    <string name="radio_button_label_daily">Daily</string>
    <string name="threading">Threading:</string>
    <string name="button_label_start_new_thread">Start new thread</string>
    <string name="threading_id_cleared">Threading ID cleared.</string>
    <string name="restore_defaults">Restore defaults</string>
    <string name="invalid_date_format">Invalid date format.</string>
    <string name="test_gps_coordinates_format">Test GPS coordinates format</string>
    <string name="test_date_format">Test date format</string>
    <string-array name="actionAfterPostEntries">
        <item>Leave photo in Fedi Photo folder</item>
        <item>Copy photo to photos folder</item>
        <item>Move photo to photos folder</item>
        <item>Delete photo</item>
    </string-array>
    <string-array name="actionAfterPostValues">
        <item>leave</item>
        <item>copy</item>
        <item>move</item>
        <item>delete</item>
    </string-array>
</resources>
