<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editTextLabel"
        android:text="@string/label_for_status" />

    <EditText
        android:id="@+id/editTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:autofillHints="title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editTextText"
        android:text="@string/text_for_post" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:autofillHints="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_visibility" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioVisibilityDirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_label_direct" />

        <RadioButton
            android:id="@+id/radioVisibilityFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_label_followers" />

        <RadioButton
            android:id="@+id/radioVisibilityUnlisted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_label_unlisted" />

        <RadioButton
            android:id="@+id/radioVisibilityPublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_button_label_public" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editTextDateFormat"
        android:text="@string/label_data_format_field" />

    <EditText
        android:id="@+id/editTextDateFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:autofillHints="SimpleDateFormat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editTextGpsCoordinatesFormat"
        android:text="@string/label_gps_format_field" />

    <EditText
        android:id="@+id/editTextGpsCoordinatesFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:autofillHints="String format" />

    <CheckBox
        android:id="@+id/checkBoxStatusActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/active_status" />


</LinearLayout>